5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4161/executions/1801_2574.log
== TEST (2019-06-08 12:25:15) 
-- CODE:
senha = input("senha: ")
n = len(senha)
if (n<8):
	print("SENHA INVALIDA")
for x in senha:
	if x.islower:
		print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:28:25) 
-- CODE:
senha = input("senha: ")
n = len(senha)
for x in senha:
	if x.isnumeric():
		print("oi")
if (n<8):
	print("SENHA INVALIDA")
elif 
-- ERROR:
File "XXXX", line 8
    elif 
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:28:31) 
-- CODE:
senha = input("senha: ")
n = len(senha)
for x in senha:
	if x.isnumeric():
		print("oi")
if (n<8):
	print("SENHA INVALIDA")

-- OUTPUT:
oi
oi
oi
oi
oi
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:28:47) 
-- CODE:
senha = input("senha: ")
n = len(senha)
for x in senha:
	if not(x.isnumeric()):
		print("oi")
if (n<8):
	print("SENHA INVALIDA")

-- OUTPUT:
oi
oi
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:30:31) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
print(a, b)

-- OUTPUT:
1 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:32:15) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:32:23) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:32:30) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:32:41) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:32:56) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
-- OUTPUT:
SENHA VALIDA
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:33:25) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
print(a, b)
-- OUTPUT:
SENHA VALIDA
1 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:33:33) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
print(a, b)
-- OUTPUT:
SENHA VALIDA
1 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-08 12:33:43) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")
print(a, b)
-- OUTPUT:
SENHA VALIDA
1 1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-08 12:33:57) 
-- CODE:
senha = input("senha: ")
n = len(senha)
a = 0
b = 0
for x in senha:
	if not(x.isnumeric()):
		if x.islower():
			a = a + 1
		elif x.isupper():
			b = b + 1
if (n<8):
	print("SENHA INVALIDA")
elif not(a>0) or not(b>0):
	print("SENHA INVALIDA")
else:
	print("SENHA VALIDA")

-- EXECUTION TIME:
0.795745
-- TEST CASE 1:
---- input:
123A456b
---- correct output:
SENHA VALIDA
---- user output:
SENHA VALIDA
-- TEST CASE 2:
---- input:
123
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- TEST CASE 3:
---- input:
123456789
---- correct output:
SENHA INVALIDA
---- user output:
SENHA INVALIDA
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
